# SmartPipe

./: .gitignore  CMakeLists.txt  README.md  pp.py
config/: app1.md  app2.md  app3.md
include/core/: app.h  common.h  data.h  define.h  executor.h  functions.h  memory.h  models.h  profile.h  queue.hpp  util.h
include/manage/: context.h
include/tools/: mdReader.h
models/yolo/: README.md  yolo.py
output/: 2021_12_21_16:08:14.json  2021_12_21_16_15_26.json  2021_12_21_16_22_55.json  2021_12_21_16_33_09.json  2021_12_21_16_38_12.json  2021_12_21_16_45_05.json  2021_12_21_16_53_51.json  2021_12_21_17_43_56.json  2021_12_21_17_55_18.json  2021_12_21_18_05_08.json  2021_12_21_20_40_41_datas.json  2021_12_21_20_46_12_datas.json  2021_12_21_20_52_56_datas.json  2021_12_21_21_04_10_datas.json  2021_12_21_21_15_33_datas.json  2021_12_21_22_36_57_datas.json  2021_12_21_22_52_22_datas.json  2021_12_21_23_03_44_datas.json  2021_12_21_23_28_41_datas.json  2021_12_21_23_54_14_datas.json  2021_12_21_23_57_07_datas.json  2021_12_22_00_04_30_datas.json  2021_12_22_00_10_01_datas.json  2021_12_24_19_58_02_datas.json  2021_12_24_20_07_24_datas.json  2021_12_25_01_06_52_datas.json
shells/: clear_shared_memory.sh
src/: main.cpp  test  test.cpp  test.py  test2.cpp
src/core/: app.cpp  data.cpp  executor.cpp  functions.cpp  memory.cpp  models.cpp  profile.cpp  util.cpp
src/manage/: context.cpp
src/tools/: mdReader.cpp
